# Deformable-DETR

./: .gitignore  README.md  pyproject.toml
benchmarks/: benchmark_msda.py
deformable_attn/: __init__.py  dispatch.py  ms_deform_attn_triton.py  reference.py
models/ops/modules/: ms_deform_attn.py
models/ops/triton_port/: BENCHMARK.md  PORT_SPEC.md  __init__.py  benchmark_msda.py  cov_contract.py  cov_dtypes.py  cov_robustness.py  cov_shapes.py  dispatch.py  test_module_integration.py  test_triton.py
tests/: cov_contract.py  cov_dtypes.py  cov_robustness.py  cov_shapes.py  test_module_integration.py  test_triton.py
util/: misc.py
