[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deformable-attn"
version = "0.1.0"
description = "Triton port of Multi-Scale Deformable Attention (MSDeformAttn) with a triton/cuda/pytorch backend dispatcher"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = ["torch>=2.7"]   # triton ships with GPU torch; pytorch fallback needs neither

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[tool.hatch.build.targets.wheel]
packages = ["deformable_attn"]   # only the op ships; tests/benchmarks/docs/research code excluded

# --- Dev-only (not in published metadata): resolve torch from the CUDA 13.0 index
# for the Blackwell sm_120 dev box. Consumers (e.g. remdoc) provide their own torch.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
